--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <title>Home Page</title>
 </head>
 <body>
-<h1>Welcome to the Chemical Warehouse Project</h1>
+<h1>Welcome to the MyTrailer Rental Service</h1>
 
 <script src="app.js"></script>
 </body>
