--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Welcome to the MyTrailer Rental Service</h1>
 
-<script src="app.js"></script>
+<script src="../static/js/app.js"></script>
 </body>
 </html>
